--- a/css/normalize.css
+++ b/css/normalize.css
@@ -7,7 +7,7 @@
  */
 
 html {
-  font-family: sans-serif; /* 1 */
+  font-family: NewYork; /* 1 */
   -ms-text-size-adjust: 100%; /* 2 */
   -webkit-text-size-adjust: 100%; /* 2 */
 }
@@ -142,8 +142,8 @@ h1 {
  */
 
 mark {
-  background: #ff0;
-  color: #000;
+  background: #FFEF62;
+  color: #4E4AFF;
 }
 
 /**
@@ -377,7 +377,7 @@ input[type="search"]::-webkit-search-decoration {
  */
 
 fieldset {
-  border: 1px solid #c0c0c0;
+  border: 1px solid #FFEF62;
   margin: 0 2px;
   padding: 0.35em 0.625em 0.75em;
 }
