--- a/css/skeleton-dark.css
+++ b/css/skeleton-dark.css
@@ -84,8 +84,7 @@ body {
   font-size: 18px;
   line-height: 24px;
   font-weight: 400;
-  font-family: "Open Sans", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial,
-    sans-serif;
+  font-family: NewYork;
 }
 
 /* Typography
@@ -116,10 +115,10 @@ p {
 /* Links
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 a {
-  color: #0085ff;
+  color: #4E4AFF;
 }
 a:hover {
-  color: #0085ff;
+  color: #4E4AFF;
 }
 
 /* Code
@@ -129,8 +128,8 @@ code {
   margin: 0 0.2rem;
   font-size: 90%;
   white-space: nowrap;
-  background: #f1f1f1;
-  border: 1px solid #e1e1e1;
+  background: #FFEF62;
+  border: 1px solid #4E4AFF;
   border-radius: 4px;
 }
 pre > code {
@@ -183,5 +182,5 @@ hr {
   margin-top: 3rem;
   margin-bottom: 3.5rem;
   border-width: 0;
-  border-top: 1px solid #e1e1e1;
+  border-top: 1px solid #4E4AFF;
 }
