--- a/css/skeleton-light.css
+++ b/css/skeleton-light.css
@@ -84,8 +84,7 @@ body {
   font-size: 18px;
   line-height: 24px;
   font-weight: 400;
-  font-family: "Open Sans", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial,
-    sans-serif;
+  font-family: NewYork;
 }
 
 /* Typography
@@ -116,10 +115,10 @@ p {
 /* Links
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 a {
-  color: #0085ff;
+  color: #4E4AFF;
 }
 a:hover {
-  color: #0085ff;
+  color: #4E4AFF;
 }
 
 /* Code
