--- a/css/skeleton-auto.css
+++ b/css/skeleton-auto.css
@@ -84,8 +84,7 @@ body {
   font-size: 18px;
   line-height: 24px;
   font-weight: 400;
-  font-family: "Open Sans", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial,
-    NewYork;
+  font-family: NewYork;
 }
 
 /* Typography
@@ -189,4 +188,12 @@ hr {
 .photo {
   height: 100px;
   width: 100px; 
+}
+
+@font-face {
+  font-family: 'newyorkregular';
+  src: url('newyork_personal_use-webfont.woff2') format('woff2'),
+       url('newyork_personal_use-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
 }
