--- a/css/normalize.css
+++ b/css/normalize.css
@@ -7,7 +7,7 @@
  */
 
 html {
-  font-family: NewYork; /* 1 */
+  font-family: newyorkregular; /* 1 */
   -ms-text-size-adjust: 100%; /* 2 */
   -webkit-text-size-adjust: 100%; /* 2 */
 }
