--- a/css/footer.css
+++ b/css/footer.css
@@ -1,19 +1,14 @@
-.footer {
+.footer 
+footer {
     background: #4E4AFF;
     position: relative;
-  
-    a {
-      color: white;
-      &:hover {
-        color: white;
-      }
-    }
+    height: 48px;
   }
   
   .footerWrapper {
     color: white;
     background: #4E4AFF;
-    // max-width: 1300px;
+    max-width: 1300px;
     margin: auto;
     padding-top: 57px;
     padding-bottom: 57px;
@@ -21,15 +16,14 @@
     padding-right: 20px;
     display: flex;
     flex-direction: row;
-  
-    @media (max-width: 1440px) {
-      max-width: 90%;
-    }
-  
-    .imageLogo {
-      
-    }
-  
+  }
+
+    html {
+        font-family: lemon_milkregular; /* 1 */
+        -ms-text-size-adjust: 100%; /* 2 */
+        -webkit-text-size-adjust: 100%; /* 2 */
+      }
+
     .centerWrapper {
       display: flex;
       flex-direction: column;
@@ -37,6 +31,7 @@
   
       padding-left: 34px;
       padding-right: 34px;
+    }
   
       .description {
         font-family: "LEMON MILK";
@@ -61,17 +56,13 @@
         align-items: flex-start;
         justify-content: flex-start;
         width: 100%;
-  
-        a {
-  
-        }
       }
   
       .iconsLine {
         width: 100%;
         align-items: center;
         justify-content: flex-start;
-        img {
+        .logoBig {
           margin-right: 10px;
         }
         .mediumIcon {
@@ -91,7 +82,6 @@
           height: 35px;
         }
       }
-    }
   
     .whiteLogo {
       width: 40px;
@@ -99,11 +89,6 @@
       margin-bottom: 30px;
     }
   
-    @media (max-width: 1440px) {
-      .imageLogo {
-        
-      }
-    }
     @media (max-width: 780px) {
       display: flex;
       flex-direction: column;
@@ -208,3 +193,11 @@
     width: 35px;
   }
   
+  @font-face {
+    font-family: 'lemon_milkregular';
+    src: url('lemonmilk-regular-webfont.woff2') format('woff2'),
+         url('lemonmilk-regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
