--- a/css/footer.css
+++ b/css/footer.css
@@ -62,7 +62,7 @@ footer {
         width: 100%;
         align-items: center;
         justify-content: flex-start;
-        .logoBig {
+        img {
           margin-right: 10px;
         }
         .mediumIcon {
