--- a/css/footer.css
+++ b/css/footer.css
@@ -2,9 +2,9 @@
 footer {
     background: #4E4AFF;
     position: relative;
-    height: 48px;
+    height: 300px;
   }
-  
+
   .footerWrapper {
     color: white;
     background: #4E4AFF;
@@ -16,25 +16,22 @@ footer {
     padding-right: 20px;
     display: flex;
     flex-direction: row;
-  }
-
-    html {
-        font-family: lemon_milkregular; /* 1 */
-        -ms-text-size-adjust: 100%; /* 2 */
-        -webkit-text-size-adjust: 100%; /* 2 */
-      }
-
-    .centerWrapper {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
   
-      padding-left: 34px;
-      padding-right: 34px;
+    @media (max-width: 1440px) {
+      max-width: 90%;
     }
+
+      .centerWrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    
+        padding-left: 34px;
+        padding-right: 34px;
+      }
   
       .description {
-        font-family: "LEMON MILK";
+        font-family: "lemon_milkregular";
         font-style: normal;
         font-size: 22px;
         line-height: 30px;
@@ -48,7 +45,7 @@ footer {
       }
   
       .aboutLine {
-        font-family: "LEMON MILK";
+        font-family: "lemon_milkregular";
         font-size: 20px;
         line-height: 24px;
         text-align: left;
