--- a/css/footer.css
+++ b/css/footer.css
@@ -12,7 +12,7 @@
   
   .footerWrapper {
     color: white;
-    background: white;
+    background: #4E4AFF;
     // max-width: 1300px;
     margin: auto;
     padding-top: 57px;
