--- a/css/footer.css
+++ b/css/footer.css
@@ -37,8 +37,9 @@
   
       padding-left: 34px;
       padding-right: 34px;
+    }
   
-      .description {
+    .description {
         font-family: "LEMON MILK";
         font-style: normal;
         font-size: 22px;
