--- a/css/footer.css
+++ b/css/footer.css
@@ -47,6 +47,7 @@
        src: url('lemonmilk-regular-webfont.woff2') format('woff2'), url('lemonmilk-regular-webfont.woff') format('woff');
        font-weight: normal;
        font-style: normal;
+       color: white;
       }
   
       .dFlex {
