update text centre

--- a/css/footer.css
+++ b/css/footer.css
@@ -54,7 +54,7 @@
   font-family: "LEMON MILK";
   font-size: 20px;
   line-height: 20px;
-  text-align: left;
+  text-align: center;
   display: flex;
   align-items: flex-start;
   justify-content: flex-start;
