--- a/css/footer.css
+++ b/css/footer.css
@@ -253,6 +253,7 @@ a.footer-text-white {
 
   .footerWrapper .aboutLine {
     font-size: 10px;
+    text-align: center;
   }
 
   .footerWrapper .iconsLine {
