--- a/css/normalize.css
+++ b/css/normalize.css
@@ -6,7 +6,7 @@
  *    user zoom.
  */
 
-html {
+ html {
   font-family: newyorkregular; /* 1 */
   -ms-text-size-adjust: 100%; /* 2 */
   -webkit-text-size-adjust: 100%; /* 2 */
@@ -18,8 +18,8 @@ html {
 
 body {
   margin: 0;
-  background-color: #FFEF62 !important;
-	color: #4E4AFF;
+  background-color: #ffef62 !important;
+  color: #4e4aff;
 }
 
 /* HTML5 display definitions
@@ -144,8 +144,8 @@ h1 {
  */
 
 mark {
-  background: #FFEF62;
-  color: #4E4AFF;
+  background: #ffef62;
+  color: #4e4aff;
 }
 
 /**
@@ -379,7 +379,7 @@ input[type="search"]::-webkit-search-decoration {
  */
 
 fieldset {
-  border: 1px solid #FFEF62;
+  border: 1px solid #ffef62;
   margin: 0 2px;
   padding: 0.35em 0.625em 0.75em;
 }
@@ -430,5 +430,28 @@ th {
 
 .photo {
   height: 50px;
-  width: 50px; 
+  width: 50px;
+}
+
+.button > img {
+  width: 30px;
+  height: 30px;
+  object-fit: cover;
+}
+
+.button div {
+  white-space: nowrap;
+  flex-grow: 1;
+  overflow: hidden;
+  text-align: left;
+}
+
+.button {
+  padding-left: 10px;
+  padding-right: 10px;
+  display: flex !important;
+  align-items: center;
+  gap: 10px;
+  margin: auto;
+  margin-bottom: 0rem !important;
 }
